--- a/styles/header.css
+++ b/styles/header.css
@@ -60,3 +60,43 @@ a{
     text-decoration: none;
 }
 
+/* Footer */
+
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 50px;
+    display: flex;
+}
+.contenedor-footer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(109, 141, 134);
+}
+
+.contenedor-footer img{
+    width: 25px;
+}
+
+.contenedor-footer p{
+    font-size: 2rem;
+    font-family: 'Special Elite', cursive;
+    color: black;
+    margin-right: 30px;
+}
+
+.contenedor-footer ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
