--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,26 @@
 .carousel{
+    padding-top: 60px;
     background-color: rgb(154, 200, 189);
     width: 100%;
-    height: 100vh;
+    height: auto;
     box-shadow: 5px 0px 15px #000;
 }
 .articulo-principal{
     width: 80%;
     height: 75%;
     margin: 0 auto;
-    margin-top: 150px;
-    border: 5px solid;
+    padding-top: 10px;
+}
+.articulo-principal .articulo-destacado{
+    width: 60%;
+    height: 100%;
+    margin: 0 auto;
 }
 
+/* Tengo que buscar las imagenes correctas*/
+.articulo-destacado img {
+    width: 100%;
+    height: 100%;
+    box-shadow: 5px 0px 55px #000;
+}
 /* Luego, cuando entienda como hacer un carousel, voy a seguir con estos estilos. */
