--- a/styles/header.css
+++ b/styles/header.css
@@ -40,25 +40,25 @@ header {
     margin:15px;
     box-shadow: 0px 0px 10px #000;
 }
-nav {
+.navegador {
     display: flex;
     width: 100%;
     height: 100px;
     justify-content: center;
     margin: 35px 60px 0 0;
 }
-ul{
+.contendero-elementosnav{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
-li{
+.contendero-elementosnav li{
     display: inline-block;
     text-align: center;
     margin: 0 20px;
 }
-li a {
+.contendero-elementosnav li a {
     font-size: 3rem;
 }
 
@@ -94,6 +94,7 @@ footer{
 
 .contenedor-footer img{
     width: 25px;
+    margin-left: 10px;
 }
 
 .contenedor-footer p{
