--- a/styles/header.css
+++ b/styles/header.css
@@ -36,7 +36,7 @@ header {
     margin: 25px;
 }
 .Logo{
-    width: 400px;
+    width: 300px;
     margin:15px;
     box-shadow: 0px 0px 10px #000;
 }
@@ -59,7 +59,7 @@ header {
     margin: 0 20px;
 }
 .contendero-elementosnav li a {
-    font-size: 3rem;
+    font-size: 2.7rem;
 }
 
 
@@ -132,7 +132,7 @@ footer{
         background-repeat: no-repeat;
         justify-content: center;
     }
-    nav{
+    .navegador{
         display: none;
     }
     .Contenedor-logo{
@@ -164,7 +164,7 @@ footer{
         background-repeat: no-repeat;
         justify-content: center;
     }
-    nav{
+    .navegador{
         display: none;
     }
     .Contenedor-logo{
@@ -197,22 +197,22 @@ footer{
 
 
 
-    nav {
+    .navegador {
         display: flex;
         width: 100%;
         height: 100px;
         justify-content: center;
         margin: 25px 0 0 0;
     }
-    ul{
+    .contendero-elementosnav{
         display: flex;
         justify-content: center;
     }
-    li{
+    .contendero-elementosnav li{
         display: inline-block;
         text-align: center;
     }
-    li a {
+    .contendero-elementosnav li a {
         font-size: 2rem;
     }
 }
@@ -235,22 +235,22 @@ footer{
     }
 
 
-    nav {
+    .navegador {
         display: flex;
         width: 100%;
         height: 100px;
         justify-content: center;
         margin: 25px 0 0 0;
     }
-    ul{
+    .contendero-elementosnav{
         display: flex;
         justify-content: center;
     }
-    li{
+    .contendero-elementosnav li{
         display: inline-block;
         text-align: center;
     }
-    li a {
+    .contendero-elementosnav li a {
         font-size: 2.3rem;
     }
 }
@@ -272,22 +272,22 @@ footer{
         margin: 15px 0 0 0;
     }
 
-    nav {
+    .navegador {
         display: flex;
         width: 100%;
         height: 100px;
         justify-content: center;
         margin: 25px 0 0 0;
     }
-    ul{
+    .contendero-elementosnav{
         display: flex;
         justify-content: center;
     }
-    li{
+    .contendero-elementosnav li{
         display: inline-block;
         text-align: center;
     }
-    li a {
+    .contendero-elementosnav li a {
         font-size: 2.3rem;
     }
 }
