--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -9,19 +9,20 @@
 
 .contenedor-formulario form{
     width: 80%;
-    height: 100%;
-    padding: 5rem;
+    height: auto;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(194, 255, 242, 0.5);
+    background-color: #eed5b6;
 }
 
 .contenedor-formulario label{
     font-size: 2.5rem;
     text-shadow: 0 0 2px white;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Special Elite', cursive;
+    margin-bottom: 5px;
 }
 
 .contenedor-formulario div{
