--- a/styles/header.css
+++ b/styles/header.css
@@ -14,14 +14,10 @@ body{
 
 header {
     position: fixed;
-    top: -315px; 
-    padding-top: 300px;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: -350px; 
+    padding-top: 350px;
     display: flex;
-    align-items: top;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     height: 600px;
     background-image: url("https://i.ibb.co/ckrVZrb/pngwing-com-1.png");
@@ -30,48 +26,226 @@ header {
     background-repeat: no-repeat;
 }
 
+
 .Contenedor-logo{
-    width: 40%;
+    width: 100%;
     height: 30px;
-    margin: 25px;
 }
+
 .Logo{
-    width: 300px;
-    margin:15px;
-    box-shadow: 0px 0px 10px #000;
+    width: 200px;
+    margin: 15px 0 0 15px;
+    box-shadow: 0px 0px 10px #000000;
+    border-radius: 5px;
 }
-.navegador {
-    display: flex;
+
+.nav{
     width: 100%;
-    height: 100px;
-    justify-content: center;
-    margin: 35px 60px 0 0;
-}
-.contendero-elementosnav{
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-}
-.contendero-elementosnav li{
-    display: inline-block;
-    text-align: center;
-    margin: 0 20px;
-}
-.contendero-elementosnav li a {
-    font-size: 2.7rem;
+    height: 72px;
+    justify-content: end;
 }
 
+#check{
+    display: none;
+}
+
+.bar-btn{
+    font-size: 5rem;
+    margin-right: 30px;
+}
+
+.input__nav:checked + .contendero-elementosnav{
+    right: 0;
+}
 
 
+.contendero-elementosnav{
+    width:90%;
+    height: 50px;
+    background-color: #eed5b6;
+    position: absolute;
+    top: 430px;
+    right: -600px;
+    transition: all 0.5s;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    border-left: 1px solid #000000;
+}
 
-
-a{
-    color: black;
-    font-size: 3rem;
-    font-family: 'Special Elite', cursive;
+.nav__item {
+    color: #000000;
     text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
+    transition: all 0.5s;
 }
+
+.nav__item a{
+    font-size: 1.4rem;
+    color: #000000;
+    text-decoration: none;
+    margin-left: 5px;
+    font-family: 'Special Elite', cursive;;
+}
+.solapa{
+    position: absolute;
+    right: 0;
+    top: 430px;
+    width: 10px;
+    height: 50px;
+    background-color: red;
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    border-left: 1px solid #000000
+}
+.solapita{
+    position: relative;
+    left: 0;
+    width: 10px;
+    height: 100%;
+    background-color: red;
+}
+
+/* media query para mas de 480px */
+
+@media screen and (min-width: 480px){
+    .contendero-elementosnav{
+        width:60%;
+        transition: all 1s;
+    }
+    .Logo{
+        width: 240px;
+        margin: 15px 0 0 15px;
+        box-shadow: 0px 0px 10px #000000;
+        border-radius: 5px;
+    }
+}
+
+/* media query para mas de 770px */
+
+@media screen and (min-width: 770px){
+    .contendero-elementosnav{
+        width:50%;
+        height: 50px;
+        transition: all 1s;
+    }
+    .Logo{
+        width: 300px;
+        margin: 15px 0 0 15px;
+        box-shadow: 0px 0px 10px #000000;
+        border-radius: 5px;
+    }
+}
+
+/* media query para mas de 1024px */
+
+@media screen and (min-width: 1024px){
+    header{
+        width: 80%;
+        left:0;
+        right:0;
+        top: -300px; 
+        padding-top: 300px;
+    }
+    .contendero-elementosnav{
+        width:100%;
+        height: auto;
+        background-color:transparent; 
+        position: static;
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        align-items: center;
+        border: none;
+        justify-content: right;
+        transition: none;
+        margin-top: 50px
+    }
+    .nav__item a{
+        font-size: 1.8rem;
+    }
+    .Logo{
+        width: 400px;
+        margin: 15px 0 0 15px;
+        box-shadow: 0px 0px 10px #000000;
+        border-radius: 5px;
+    }
+    .solapa{
+        display: none;
+    }
+    .solapita{
+        display: none;
+    }
+    .bar-btn{
+        display: none;
+    }
+}
+    
+/* media query para mas de 1280px */
+
+@media screen and (min-width: 1280px){
+    header{
+        width: 80%;
+        left:0;
+        right:0;
+        top: -300px; 
+        padding-top: 300px;
+    }
+    .contendero-elementosnav{
+        width:100%;
+        height: auto;
+        background-color:transparent; 
+        position: static;
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        align-items: center;
+        border: none;
+        justify-content: right;
+        transition: none;
+        margin-top: 50px
+    }
+    .nav__item a{
+        font-size: 2rem;
+        margin-right: 50px
+    }
+    .Logo{
+        width: 400px;
+        margin: 15px 0 0 15px;
+        box-shadow: 0px 0px 10px #000000;
+        border-radius: 5px;
+    }
+}
+
+/* media query para mas de 1400px */
+
+@media screen and (min-width: 1547px){
+    header{
+        width: 60%;
+        left:0;
+        right:0;
+        top: -300px; 
+        padding-top: 300px;
+    }
+    .nav__item a{
+        font-size: 2.2rem;
+        margin-right: 20px
+    }
+    .Logo{
+        width: 400px;
+        margin: 15px 0 0 15px;
+        box-shadow: 0px 0px 10px #000000;
+        border-radius: 5px;
+    }
+}
+    
+    
 
 /* Footer */
 
@@ -98,200 +272,17 @@ footer{
 }
 
 .contenedor-footer p{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: 'Special Elite', cursive;
     color: black;
-    margin-right: 30px;
+    width: auto;
+    margin-left: 15px;
 }
 
 .contenedor-footer ul{
     list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 3px;
+    margin: 3px 15px 0 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-
-/* Media querie hasta 480px */
-
-@media screen and (max-width: 480px){
-    header {
-        position: fixed;
-        top: -350px; 
-        padding-top: 350px;
-        display: flex;
-        width: 100%;
-        margin: 0 auto;
-        height: 600px;
-        background-image: url("https://i.ibb.co/ckrVZrb/pngwing-com-1.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        justify-content: center;
-    }
-    .navegador{
-        display: none;
-    }
-    .Contenedor-logo{
-        width: auto;
-        margin: 0;
-        height: 30px;
-    }
-    .Logo{
-        width: 300px;
-        margin: 15px 0 0 0;
-    }
-    .contenedor-footer p{
-        font-size: 1.5rem;
-    }
- 
-}
-
-/* Media querie de 480px hasta 768px */
-
-@media screen and (min-width: 480px) and (max-width: 768px){
-    header {
-        position: fixed;
-        top: -350px; 
-        padding-top: 350px;
-        display: flex;
-        width: 100%;
-        margin: 0 auto;
-        height: 600px;
-        background-image: url("https://i.ibb.co/ckrVZrb/pngwing-com-1.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        justify-content: center;
-    }
-    .navegador{
-        display: none;
-    }
-    .Contenedor-logo{
-        width: auto;
-        margin: 0;
-    }
-    .Logo{
-        width: 300px;
-        margin: 15px 0 0 0;
-    }
-    /*No me parece necesario tocar nada*/
-}
-
-/* Media querie de 768px a 808px */
-
-@media screen and (min-width: 768px) and (max-width: 808px){
-    header {
-        top: -300px;
-        padding-top: 300px;
-    }
-    /*No me parece necesario tocar nada*/
-    .Contenedor-logo{
-        width: auto;
-        margin: 25px 0 0 25px;
-    }
-    .Logo{
-        width: 200px;
-        margin: 15px 0 0 0;
-    }
-
-
-
-    .navegador {
-        display: flex;
-        width: 100%;
-        height: 100px;
-        justify-content: center;
-        margin: 25px 0 0 0;
-    }
-    .contendero-elementosnav{
-        display: flex;
-        justify-content: center;
-    }
-    .contendero-elementosnav li{
-        display: inline-block;
-        text-align: center;
-    }
-    .contendero-elementosnav li a {
-        font-size: 2rem;
-    }
-}
-
-/* Media querie de 808px a 952px */
-
-@media screen and (min-width: 808px) and (max-width: 952px){
-    header {
-        top: -300px;
-        padding-top: 300px;
-    }
-    /*No me parece necesario tocar nada*/
-    .Contenedor-logo{
-        width: auto;
-        margin: 25px 0 0 25px;
-    }
-    .Logo{
-        width: 200px;
-        margin: 15px 0 0 0;
-    }
-
-
-    .navegador {
-        display: flex;
-        width: 100%;
-        height: 100px;
-        justify-content: center;
-        margin: 25px 0 0 0;
-    }
-    .contendero-elementosnav{
-        display: flex;
-        justify-content: center;
-    }
-    .contendero-elementosnav li{
-        display: inline-block;
-        text-align: center;
-    }
-    .contendero-elementosnav li a {
-        font-size: 2.3rem;
-    }
-}
-
-/* media queries de 952px a 1279px */
-
-@media screen and (min-width: 952px) and (max-width: 1279px){
-    header {
-        top: -300px;
-        padding-top: 300px;
-    }
-    /*No me parece necesario tocar nada*/
-    .Contenedor-logo{
-        width: auto;
-        margin: 25px 0 0 25px;
-    }
-    .Logo{
-        width: 300px;
-        margin: 15px 0 0 0;
-    }
-
-    .navegador {
-        display: flex;
-        width: 100%;
-        height: 100px;
-        justify-content: center;
-        margin: 25px 0 0 0;
-    }
-    .contendero-elementosnav{
-        display: flex;
-        justify-content: center;
-    }
-    .contendero-elementosnav li{
-        display: inline-block;
-        text-align: center;
-    }
-    .contendero-elementosnav li a {
-        font-size: 2.3rem;
-    }
-}
-
