--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -7,8 +7,18 @@
     align-items: center;
 }
 
+#boton{
+    width:200px;
+    height: 40px;
+    background-color: #b6a085;
+    color: black;
+    font-family: 'Special Elite', cursive;
+    border: 1px solid black;
+    font-size: 15px;
+}
+
 .contenedor-formulario form{
-    width: 80%;
+    width: 60%;
     height: auto;
     padding: 15px;
     display: flex;
@@ -39,7 +49,6 @@
     border: 1px solid #ccc;
     padding: 0.5rem;
     font-size: 1.5rem;
-    font-family: 'Roboto', sans-serif;
 }
 
 .contenedor-formulario textarea{
@@ -49,7 +58,6 @@
     border: 1px solid #ccc;
     padding: 0.5rem;
     font-size: 1.5rem;
-    font-family: 'Roboto', sans-serif;
 }
 
 @media screen and (max-width: 480px){
