--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: 'Playlist';
-    src: url('../Playlist\ Script.otf');
+    src: url('../estaticos/fuentes/Playlist\ Script.otf');
     font-style: normal;
     font-weight: normal;
 }
