--- a/css/test.css
+++ b/css/test.css
@@ -51,7 +51,7 @@ header {
 
 .contendero-elementosnav {
   height: 50px;
-  width: 80%;
+  width: 100%;
   background-color: #eed5b6;
   position: absolute;
   top: 430px;
@@ -95,3 +95,67 @@ header {
   width: 10px;
   height: 100%;
   background-color: red; }
+
+@media (min-width: 480px) {
+  .contendero-elementosnav {
+    width: 60%;
+    transition: all 1s; }
+  .Logo {
+    width: 210px;
+    margin: 15px 0 0 15px;
+    box-shadow: 0px 0px 10px #000000;
+    border-radius: 5px; } }
+
+@media (min-width: 770px) {
+  .contendero-elementosnav {
+    width: 50%; }
+  .Logo {
+    width: 300px; } }
+
+@media (min-width: 1024px) {
+  header {
+    width: 80%;
+    left: 0;
+    right: 0;
+    top: -300px;
+    padding-top: 300px; }
+  .contendero-elementosnav {
+    width: 100%;
+    height: auto;
+    position: static;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    border: none;
+    justify-content: right;
+    transition: none;
+    margin: 50px 15px 0 0;
+    background: none; }
+  .nav__item a {
+    font-size: 1.8rem; }
+  .solapa {
+    display: none; }
+  .solapita {
+    display: none; }
+  .bar-btn {
+    display: none; } }
+
+@media (min-width: 1280px) {
+  header {
+    top: -320px;
+    padding-top: 320px; }
+  .contendero-elementosnav {
+    margin: 50px 80px 0 0; }
+  .nav__item a {
+    font-size: 2.2rem; }
+    .nav__item a:hover {
+      font-size: 2.5rem;
+      padding: 10px;
+      text-shadow: 0px 0px 10px #ffffff; }
+  .Logo {
+    width: 400px; } }
+
+@media (min-width: 1547px) {
+  .contendero-elementosnav {
+    margin-right: 200px; } }
