--- a/css/test.css
+++ b/css/test.css
@@ -44,6 +44,7 @@ header {
 
 .bar-btn {
   font-size: 5rem;
+  margin-top: -10px;
   margin-right: 30px; }
 
 .input__nav:checked + .contendero-elementosnav {
@@ -96,6 +97,37 @@ header {
   height: 100%;
   background-color: red; }
 
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  display: flex; }
+
+.contenedor-footer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #9dcbc0; }
+  .contenedor-footer img {
+    width: 25px;
+    margin-left: 5px; }
+  .contenedor-footer ul {
+    list-style: none;
+    margin: 3px 15px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .contenedor-footer p {
+    font-size: 0.85rem;
+    font-family: 'Special Elite', cursive;
+    color: black;
+    width: auto;
+    margin: 10px 0 0 0; }
+
 @media (min-width: 480px) {
   .contendero-elementosnav {
     width: 60%;
@@ -104,13 +136,28 @@ header {
     width: 210px;
     margin: 15px 0 0 15px;
     box-shadow: 0px 0px 10px #000000;
-    border-radius: 5px; } }
+    border-radius: 5px; }
+  .contenedor-footer {
+    justify-content: space-around; }
+    .contenedor-footer p {
+      font-size: 1.2rem; }
+    .contenedor-footer img {
+      width: 35px;
+      margin-left: 5px; } }
 
 @media (min-width: 770px) {
   .contendero-elementosnav {
     width: 50%; }
   .Logo {
-    width: 300px; } }
+    width: 300px; }
+  .contenedor-footer {
+    justify-content: center; }
+    .contenedor-footer p {
+      font-size: 1.5rem;
+      margin-right: 15px; }
+    .contenedor-footer img {
+      width: 35px;
+      margin-left: 5px; } }
 
 @media (min-width: 1024px) {
   header {
@@ -130,7 +177,7 @@ header {
     border: none;
     justify-content: right;
     transition: none;
-    margin: 50px 15px 0 0;
+    margin: 18px 15px 0 0;
     background: none; }
   .nav__item a {
     font-size: 1.8rem; }
