--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -35,6 +35,7 @@ header
 
 .bar-btn
     font-size: 5rem;
+    margin-top: -10px;
     margin-right: 30px;
 
 .input__nav:checked + .contendero-elementosnav
