--- a/sass/_mediaQueries.sass
+++ b/sass/_mediaQueries.sass
@@ -11,6 +11,15 @@
         box-shadow: 0px 0px 10px #000000;
         border-radius: 5px;
 
+    //footer
+    .contenedor-footer
+        justify-content: space-around;
+        p
+            font-size: 1.2rem;
+        img
+            width: 35px
+            margin-left: 5px;
+
 @media (min-width: $medio-min)
     //Header
     .contendero-elementosnav
@@ -18,6 +27,17 @@
         
     .Logo
         width: 300px;
+
+    //footer
+    .contenedor-footer
+        justify-content: center;
+        p
+            font-size: 1.5rem;
+            margin-right: 15px;
+        img
+            width: 35px
+            margin-left: 5px;
+
 
 @media (min-width: $media-max)
     //Header
@@ -38,7 +58,7 @@
         border: none;
         justify-content: right;
         transition: none;
-        margin: 50px 15px 0 0;
+        margin: 18px 15px 0 0;
         background: none
 
     .nav__item
