Antes de arrancar a pasar todo a sass

--- a/css/test.css
+++ b/css/test.css
@@ -9,7 +9,8 @@ body {
   background-attachment: fixed; }
 
 header {
-  position: absolute;
+  position: fixed;
+  z-index: 2;
   top: -360px;
   padding-top: 360px;
   display: flex;
