--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,6 +1,7 @@
 @import "variables";
 header 
-    position: absolute;
+    position: fixed;
+    z-index: 2;
     top: -360px; 
     padding-top: 360px;
     display: flex;
