--- a/sass/_mediaQueries.sass
+++ b/sass/_mediaQueries.sass
@@ -3,13 +3,16 @@
 @media (min-width: $minimo)
     //Header
     .contendero-elementosnav
-        width: 60%;
+        width: 70%;
         transition: all 1s;
     .Logo
         width: 210px;
         margin: 15px 0 0 15px;
         box-shadow: 0px 0px 10px #000000;
         border-radius: 5px;
+        
+    .bar-btn
+        margin-right: 60px
 
     //footer
     .contenedor-footer
@@ -19,6 +22,12 @@
         img
             width: 35px
             margin-left: 5px;
+    
+    //main
+    h1
+        font-size: 5rem;
+    h2
+        font-size: 3rem;
 
 @media (min-width: $medio-min)
     //Header
@@ -28,6 +37,8 @@
     .Logo
         width: 300px;
 
+    .bar-btn
+        margin-right: 80px
     //footer
     .contenedor-footer
         justify-content: center;
@@ -37,6 +48,12 @@
         img
             width: 35px
             margin-left: 5px;
+    
+    //main
+    h1
+        font-size: 6rem;
+    h2
+        font-size: 4rem;
 
 
 @media (min-width: $media-max)
@@ -73,6 +90,17 @@
     
     .bar-btn
         display: none;
+
+    //main
+    h1
+        font-size: 7rem;
+    h2
+        font-size: 5rem;
+    
+    .carousel-contenedor
+        padding-top: 210px;
+        width: 80%;
+        margin: 0 auto;
 
 @media (min-width: $grande-min)
     //Header
