--- a/sass/_mediaQueries.sass
+++ b/sass/_mediaQueries.sass
@@ -29,6 +29,17 @@
     h2
         font-size: 3rem;
 
+    //articulo
+    .main-art
+        width: 80%;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+    
+    .item
+        width: 80%;
+
 @media (min-width: $medio-min)
     //Header
     .contendero-elementosnav
@@ -54,7 +65,15 @@
         font-size: 6rem;
     h2
         font-size: 4rem;
-
+    
+    //articulo
+    .main-art
+        width: 75%;
+        justify-content: center;
+    
+    .item
+        width: 40%;
+        margin: 0 5px;
 
 @media (min-width: $media-max)
     //Header
@@ -109,6 +128,9 @@
         padding-top: 320px;
     .contendero-elementosnav
         margin: 15px 80px 0 0;
+    .Contenedor-logo
+        margin-left: 35px;
+
     .nav__item
         a
             font-size: 2.2rem;
@@ -119,6 +141,11 @@
                 text-shadow: 0px 0px 10px #ffffff;
     .Logo
         width: 400px;
+    
+    //articulo
+    .main-art
+        width: 80%;
+        margin-top: 240px;
 
 @media (min-width: $grande-max)
     //Header
