Termine la parte de contacto

--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -5,6 +5,7 @@ footer
     right: 0;
     height: 50px;
     display: flex;
+    border-top: 1px solid black;
 
 .contenedor-footer
     width: 100%;
