--- a/sass/_mediaQueries.sass
+++ b/sass/_mediaQueries.sass
@@ -39,6 +39,15 @@
     
     .item
         width: 80%;
+    
+    //contacto
+    .contenedor-formulario
+        form
+            width: 80%;
+        div
+            width: 100%;
+        input
+            width: 100%;
 
 @media (min-width: $medio-min)
     //Header
@@ -74,6 +83,14 @@
     .item
         width: 40%;
         margin: 0 5px;
+    
+    //contacto
+    .contenedor-formulario
+        width: 80%;
+        margin: 0 auto;
+        form
+            width: 60%;
+ 
 
 @media (min-width: $media-max)
     //Header
@@ -112,14 +129,20 @@
 
     //main
     h1
-        font-size: 7rem;
+        font-size: 10rem;
     h2
-        font-size: 5rem;
+        font-size: 4rem;
     
     .carousel-contenedor
-        padding-top: 210px;
-        width: 80%;
+        padding-top: 200px;
+        width: 60%;
         margin: 0 auto;
+    
+
+    //contacto
+    .contenedor-formulario
+        width: 80%;
+        margin: 150px auto;
 
 @media (min-width: $grande-min)
     //Header
@@ -146,6 +169,17 @@
     .main-art
         width: 80%;
         margin-top: 240px;
+
+    //contacto
+    .main-contacto
+        width: 100%;
+        margin: 200px 0;
+    
+    .contenedor-formulario
+        width: 60%;
+        form
+            width: 80%;
+
 
 @media (min-width: $grande-max)
     //Header
