--- a/css/styles.css
+++ b/css/styles.css
@@ -163,13 +163,74 @@ h2 {
   width: 100%;
   display: inline; }
 
+.main-contacto {
+  margin-bottom: 90px; }
+
+.contenedor-formulario {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 160px;
+  background-color: #9dcbc0;
+  box-shadow: 0 2px 10px black; }
+  .contenedor-formulario form {
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .contenedor-formulario label {
+    font-size: 2rem;
+    text-shadow: 0 0 2px white;
+    font-family: 'Special Elite', cursive;
+    margin-bottom: 5px;
+    text-decoration: underline; }
+  .contenedor-formulario div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px; }
+  .contenedor-formulario input {
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    border: 1px solid black;
+    font-size: 1.4rem;
+    box-shadow: 0 2px 10px black;
+    font-family: 'Special Elite', cursive; }
+  .contenedor-formulario textarea {
+    width: 100%;
+    height: 13rem;
+    border-radius: 5px;
+    border: 1px solid black;
+    font-size: 1.2rem;
+    box-shadow: 0 2px 10px black;
+    font-family: 'Special Elite', cursive; }
+
+#boton {
+  width: 200px;
+  height: 40px;
+  background-color: #eed5b6;
+  color: black;
+  font-family: 'Special Elite', cursive;
+  border: 1px solid black;
+  font-size: 15px;
+  margin: 0;
+  box-shadow: 0 2px 10px black; }
+
 footer {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   height: 50px;
-  display: flex; }
+  display: flex;
+  border-top: 1px solid black; }
 
 .contenedor-footer {
   width: 100%;
@@ -223,7 +284,13 @@ footer {
     flex-wrap: wrap;
     justify-content: center; }
   .item {
-    width: 80%; } }
+    width: 80%; }
+  .contenedor-formulario form {
+    width: 80%; }
+  .contenedor-formulario div {
+    width: 100%; }
+  .contenedor-formulario input {
+    width: 100%; } }
 
 @media (min-width: 770px) {
   .contendero-elementosnav {
@@ -249,7 +316,12 @@ footer {
     justify-content: center; }
   .item {
     width: 40%;
-    margin: 0 5px; } }
+    margin: 0 5px; }
+  .contenedor-formulario {
+    width: 80%;
+    margin: 0 auto; }
+    .contenedor-formulario form {
+      width: 60%; } }
 
 @media (min-width: 1024px) {
   header {
@@ -280,13 +352,16 @@ footer {
   .bar-btn {
     display: none; }
   h1 {
-    font-size: 7rem; }
+    font-size: 10rem; }
   h2 {
-    font-size: 5rem; }
+    font-size: 4rem; }
   .carousel-contenedor {
-    padding-top: 210px;
+    padding-top: 200px;
+    width: 60%;
+    margin: 0 auto; }
+  .contenedor-formulario {
     width: 80%;
-    margin: 0 auto; } }
+    margin: 150px auto; } }
 
 @media (min-width: 1280px) {
   header {
@@ -306,7 +381,14 @@ footer {
     width: 400px; }
   .main-art {
     width: 80%;
-    margin-top: 240px; } }
+    margin-top: 240px; }
+  .main-contacto {
+    width: 100%;
+    margin: 200px 0; }
+  .contenedor-formulario {
+    width: 60%; }
+    .contenedor-formulario form {
+      width: 80%; } }
 
 @media (min-width: 1547px) {
   .contendero-elementosnav {
