--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,27 @@ h2 {
   margin: 0;
   box-shadow: 0 2px 10px black; }
 
+.main-sobreNosotros {
+  width: 98%;
+  margin: 170px auto;
+  box-shadow: 0px 10px 10px #000000;
+  display: grid;
+  grid-template-rows: auto auto;
+  padding: 10px;
+  background-color: #eed5b6;
+  font-family: 'Special Elite', cursive; }
+  .main-sobreNosotros p {
+    font-size: 1.8rem;
+    padding: 20px 10px 10px 10px; }
+
+.sobreNosotros-Titulo {
+  font-size: 3rem; }
+
+.firma {
+  text-align: right;
+  font-size: 1.8rem;
+  margin-top: 25px; }
+
 footer {
   position: fixed;
   bottom: 0;
@@ -290,7 +311,9 @@ footer {
   .contenedor-formulario div {
     width: 100%; }
   .contenedor-formulario input {
-    width: 100%; } }
+    width: 100%; }
+  .main-sobreNosotros {
+    width: 80%; } }
 
 @media (min-width: 770px) {
   .contendero-elementosnav {
@@ -321,7 +344,12 @@ footer {
     width: 80%;
     margin: 0 auto; }
     .contenedor-formulario form {
-      width: 60%; } }
+      width: 60%; }
+  .main-sobreNosotros {
+    width: 60%;
+    margin-top: 200px; }
+    .main-sobreNosotros p {
+      font-size: 2rem; } }
 
 @media (min-width: 1024px) {
   header {
