--- a/sass/_mediaQueries.sass
+++ b/sass/_mediaQueries.sass
@@ -48,6 +48,10 @@
             width: 100%;
         input
             width: 100%;
+    
+    //sobreNosotros
+    .main-sobreNosotros
+        width: 80%;
 
 @media (min-width: $medio-min)
     //Header
@@ -90,6 +94,13 @@
         margin: 0 auto;
         form
             width: 60%;
+
+    //sobreNosotros
+    .main-sobreNosotros
+        width: 60%;
+        margin-top: 200px;
+        p
+            font-size: 2rem;
  
 
 @media (min-width: $media-max)
