intente arreglar un poco el tema del tamaño de la imagen principal

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,9 @@ header {
   font-style: normal;
   font-weight: normal; }
 
+.container {
+  max-width: 827px; }
+
 .carousel-contenedor {
   padding-top: 150px;
   background-color: #9ac8bd;
