--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -3,7 +3,8 @@
     src: url('../static/fuentes/Playlist\ Script.otf');
     font-style: normal;
     font-weight: normal;
-
+.container
+    max-width: 827px;
 .carousel-contenedor
     padding-top: 150px;
     background-color: rgb(154, 200, 189);
