--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -3,11 +3,7 @@ $color-primary: #9dcbc0;
 $color-secondary: #eed5b6;
 
 //Media Queries
-$minimo: 480px;
-$medio-min: 770px;
-$media-max: 1024px;
-$grande-min: 1280px;
-$grande-max: 1547px;
+$breackPoints: (minimo: 480px, medio-min: 770px, media-max: 1024px, grande-min: 1280px, grande-max: 1547px)
 
 
-
+ 
