--- a/css/styles.css
+++ b/css/styles.css
@@ -201,17 +201,17 @@ h2 {
   .contenedor-formulario input {
     width: 100%;
     height: 50px;
+    font-size: 1.4rem;
     border-radius: 5px;
     border: 1px solid black;
-    font-size: 1.4rem;
     box-shadow: 0 2px 10px black;
     font-family: 'Special Elite', cursive; }
   .contenedor-formulario textarea {
     width: 100%;
     height: 13rem;
+    font-size: 1.2rem;
     border-radius: 5px;
     border: 1px solid black;
-    font-size: 1.2rem;
     box-shadow: 0 2px 10px black;
     font-family: 'Special Elite', cursive; }
 
@@ -220,11 +220,12 @@ h2 {
   height: 40px;
   background-color: #eed5b6;
   color: black;
-  font-family: 'Special Elite', cursive;
-  border: 1px solid black;
   font-size: 15px;
   margin: 0;
-  box-shadow: 0 2px 10px black; }
+  border-radius: 5px;
+  border: 1px solid black;
+  box-shadow: 0 2px 10px black;
+  font-family: 'Special Elite', cursive; }
 
 .main-sobreNosotros {
   width: 98%;
