--- a/sass/_contacto.sass
+++ b/sass/_contacto.sass
@@ -1,3 +1,12 @@
+@mixin bordeYSombras
+    border-radius: 5px
+    border: 1px solid black
+    box-shadow: 0 2px 10px black;
+    font-family: 'Special Elite', cursive;
+
+    
+    
+    
 .main-contacto
     margin-bottom: 90px;
 .contenedor-formulario
@@ -32,19 +41,13 @@
     input
         width: 100%;
         height: 50px;
-        border-radius: 5px;
-        border: 1px solid black;
         font-size: 1.4rem;
-        box-shadow: 0 2px 10px black;
-        font-family: 'Special Elite', cursive;
+        @include bordeYSombras;
     textarea
         width: 100%;
         height: 13rem;
-        border-radius: 5px;
-        border: 1px solid black;
-        font-size: 1.2rem;  
-        box-shadow: 0 2px 10px black;
-        font-family: 'Special Elite', cursive;
+        font-size: 1.2rem; 
+        @include bordeYSombras; 
 
    
 #boton
@@ -52,8 +55,6 @@
     height: 40px;
     background-color: $color-secondary;
     color: black;
-    font-family: 'Special Elite', cursive;
-    border: 1px solid black;
     font-size: 15px; 
     margin: 0;  
-    box-shadow: 0 2px 10px black;
+    @include bordeYSombras;
