--- a/sass/_mediaQueries.sass
+++ b/sass/_mediaQueries.sass
@@ -1,6 +1,6 @@
 @import "variables";
 
-@media (min-width: $minimo)
+@media (min-width: map-get($breackPoints, minimo)) 
     //Header
     .contendero-elementosnav
         width: 70%;
@@ -53,7 +53,8 @@
     .main-sobreNosotros
         width: 80%;
 
-@media (min-width: $medio-min)
+
+@media (min-width: map-get($breackPoints, medio-min)) 
     //Header
     .contendero-elementosnav
         width: 50%;
@@ -103,7 +104,7 @@
             font-size: 2rem;
  
 
-@media (min-width: $media-max)
+@media (min-width: map-get($breackPoints, media-max)) 
     //Header
     header
         width: 80%;
@@ -155,7 +156,7 @@
         width: 80%;
         margin: 150px auto;
 
-@media (min-width: $grande-min)
+@media (min-width: map-get($breackPoints, grande-min)) 
     //Header
     header
         top: -320px;
@@ -192,7 +193,7 @@
             width: 80%;
 
 
-@media (min-width: $grande-max)
+@media (min-width: map-get($breackPoints, grande-max)) 
     //Header
     .contendero-elementosnav
         margin-right: 200px;
