--- a/sass/_articulo.sass
+++ b/sass/_articulo.sass
@@ -15,6 +15,8 @@
         object-fit: cover;
         object-position: center;
         height: 100%;
+    div
+        font-size: 1.5rem;
 
 .texto
     font-size: 1.2rem;
